--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.1.3",
     "framer-motion-carousel": "^2.0.1",
     "mdb-react-ui-kit": "^4.0.0",
+    "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
